# targeted-quickcheck

./: CHANGELOG.md  LICENSE  README.md  targeted-quickcheck.cabal
app/: Graph.hs  Main.hs
examples/: Main.hs
src/Test/QuickCheck/: Targeted.hs
tests/: Main.hs
