cabal-version:      3.0
name:               targeted-quickcheck
version:            0.1.0.0
synopsis:           Targeted generators for QuickCheck
description:        Combinators to write QuickCheck generators using classical search algorithms guided by an objective function
license:            MIT
license-file:       LICENSE
author:             Pedro Vasconcelos
maintainer:         pbvascon@fc.up.pt
category:           Testing
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library 
    import:           warnings
    exposed-modules: Test.QuickCheck.Targeted
    build-depends:
           base ^>=4.17.2.1,
           QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite targeted-examples
    type:            exitcode-stdio-1.0       
    hs-source-dirs:  tests
    main-is:         Main.hs            
    build-depends:
           base ^>=4.17.2.1,
           containers,
           QuickCheck,
           hspec,
           targeted-quickcheck                      
