cabal-version:      3.0
name:               targeted-quickcheck
version:            0.1.0.1
synopsis:           Targeted generators for QuickCheck
description:        Combinators to write QuickCheck generators using classical search algorithms guided by an objective function
license:            MIT
license-file:       LICENSE
author:             Pedro Vasconcelos
maintainer:         pbvascon@fc.up.pt
homepage:           https://github.com/pbv/targeted-quickcheck/
category:           Testing
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library 
    import:           warnings
    exposed-modules: Test.QuickCheck.Targeted
    build-depends:
           base ^>=4.17.2.1,
           QuickCheck >= 2.15.0 && < 2.16,
    hs-source-dirs:   src
    default-language: Haskell2010

executable targeted-examples
    hs-source-dirs:  examples
    main-is:         Main.hs            
    build-depends:
           base ^>=4.17.2.1,
           containers >= 0.6.7 && < 0.7,
           QuickCheck >= 2.15.0 && < 2.16,
           hspec >= 2.11.10 && < 2.12,
           targeted-quickcheck                      
    default-language: Haskell2010
